implement novu + resend + react-email

--- a/expo-app/.env
+++ b/expo-app/.env
@@ -1,11 +1,6 @@
-# Knock API Keys
-EXPO_PUBLIC_KNOCK_PUBLIC_KEY=pk_test_UXE7R2la3QBCPqEZdLYc6KecMelVZFR2jHVcLmNIc44
+# Expo Project Configuration
+EXPO_PUBLIC_PROJECT_ID=b0c51212-b658-4874-a387-49541962ff00
+EXPO_PUBLIC_PACKAGE_NAME=com.sammy23.expopushnovu
 
-# Knock Channel ID (get this from your Expo channel in Knock dashboard)
-EXPO_PUBLIC_KNOCK_EXPO_CHANNEL_ID=b8fe561e-f367-4767-b7d3-b346215c316b
-
-# Your backend URL (replace with your Ubuntu IP)
-EXPO_PUBLIC_BACKEND_URL=http://192.168.10.62:3000
-
-# Expo Project ID
-EXPO_PUBLIC_PROJECT_ID=7d7daf77-7449-49e4-b5fc-722424fa6713
+# Backend Configuration
+EXPO_PUBLIC_BACKEND_URL=http://192.168.0.55:3001
