--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@novu/api": "^1.1.0",
+    "@novu/node": "^2.6.6",
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
     "@upstash/qstash": "^2.8.1",
@@ -24,7 +24,8 @@
     "he": "^1.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "resend": "^4.5.1"
+    "resend": "^4.5.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
