--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -9,16 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@knocklabs/expo": "^0.3.17",
-    "expo": "~53.0.9",
-    "expo-constants": "~17.1.6",
-    "expo-device": "~7.1.4",
-    "expo-notifications": "~0.31.2",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "expo-dev-client": "~5.1.8",
-    "expo-build-properties": "~0.14.6"
+    "expo": "^53.0.9",
+    "expo-build-properties": "^0.14.6",
+    "expo-constants": "^17.1.6",
+    "expo-dev-client": "^5.1.8",
+    "expo-device": "^7.1.4",
+    "expo-notifications": "^0.31.2",
+    "expo-status-bar": "^2.2.3",
+    "react": "^19.1.0",
+    "react-native": "^0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
